[package]
name = "sssync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
xxhash-rust = { version= "0.8.3", features = ["xxh3"]}
aws-sdk-s3 = "0.11.0"
rusqlite = { version = "0.27.0", features = ["bundled"] }
clap = { version = "3.1.18", features = ["derive"] }
libc = "0.2"
errno = "0.2"
