[package]
name = "sssync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
xxhash-rust = { version= "0.8.3", features = ["xxh3"]}
aws-sdk-s3 = "0.12.0"
aws-config = "0.12.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
clap = { version = "3.1.18", features = ["derive"] }
libc = "0.2"
errno = "0.2"
url = "2.2.2"
tokio-stream = "0.1.8"
futures = "0.3.21"
futures-executor = "0.3.21"
tokio = { version = "1.18.2", features = ["full"] }
uuid = { version = "1.0.0", features = ["v4", "fast-rng"] }
bytes = "1.1.0"
