[package]
name = "sssync"
description = "A version control system for large files backed by online blob storage"
version = "0.1.1"
edition = "2021"
license = "MIT"
homepage = "https://github.com/aconbere/sssync"
repository = "https://github.com/aconbere/sssync"
documentation = "https://github.com/aconbere/sssync/blob/main/README.md"
readme = "README.md"
keywords = ["version-control", "cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
xxhash-rust = { version= "0.8.15", features = ["xxh3"]}
aws-sdk-s3 = "1.72.0"
aws-config = "1.5.15"
rusqlite = { version = "0.33.0", features = ["bundled"] }
clap = { version = "4.5.27", features = ["derive"] }
libc = "0.2"
errno = "0.3"
url = "2.5.4"
tokio-stream = "0.1.17"
futures = "0.3.31"
futures-executor = "0.3.31"
tokio = { version = "1.43.0", features = ["full"] }
uuid = { version = "1.12.1", features = ["v4", "fast-rng"] }
bytes = "1.9.0"
anyhow = "1.0.95"
